Refactored overview and details slide to not contain lists. Added keyword editing and deletion possibility.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -18,7 +18,7 @@
             <div class="form-group" editable-field-container="disable">
               <label class="sr-only" for="itemTitle">title</label>
               <div>
-                <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field></input>
+                <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field/>
               </div>
             </div>
           </form>
