--- a/frontend/core/src/main/webapp/static/app/notes/addNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/addNote.html
@@ -2,7 +2,7 @@
   <div class="form-group" editable-field-container="disable">
     <label class="sr-only" for="noteTitle">title</label>
     <div>
-      <input type="text" id="noteTitle" class="simple-input" ng-model="newNote.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add note..." autocapitalize="none" maxlength="128" autocorrect="off" editable-field></input>
+      <input type="text" id="noteTitle" class="simple-input" ng-model="newNote.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add note..." autocapitalize="none" maxlength="128" autocorrect="off" editable-field/>
     </div>
   </div>
 </form>
