--- a/frontend/core/src/main/webapp/static/app/tasks/addTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/addTask.html
@@ -2,7 +2,7 @@
   <div class="form-group" editable-field-container="disable">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
-      <input type="text" id="taskTitle" class="simple-input" ng-model="subtask.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add task..." maxlength="128" editable-field></input>
+      <input type="text" id="taskTitle" class="simple-input" ng-model="subtask.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add task..." maxlength="128" editable-field/>
     </div>
   </div>
 </form>
