--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -2,9 +2,9 @@
   <div class="column">
     <div ng-hide="omnibarVisible && isActiveSlide('contexts')" class="content-container page-content-container" scroll-to>
       <div class="inner-page-content-container" swiper-prevent>
-        <section>
+        <section ng-init="newContext={title:undefined, tagType:'context'}">
           <h3>contexts</h3>
-          <ul class="list-arrow-right">
+          <ul>
             <li ng-show="contexts.length" ng-repeat="context in contexts">
               <a href class="click-to-slide" ng-click="showContextDetails(context)">
                 <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
@@ -14,12 +14,16 @@
               <form class="add-element" role="form" name="addContextForm" ng-submit="callAndRefresh(addContext, newContext)" autocapitalize="none" autocorrect="off" add-item>
                 <div class="form-group" editable-field-container="disable">
                   <label class="sr-only" for="contextTitle">title</label>
-                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add context..." editable-field></input>
+                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add context..." editable-field/>
                 </div>
               </form>
             </li>
           </ul>
-          <h3><a href class="page-header" swiper-click="showNoContextDetails()"><span class="link-title">no context</span><span class="icon-arrow-right"></span></a></h3>
+          <h3>
+            <a href class="page-header click-to-slide" swiper-click="showNoContextDetails()">
+              <span class="link-title">no context</span><span class="icon-arrow-right"></span>
+            </a>
+          </h3>
         </section>
       </div>
     </div>
