--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -1,6 +1,6 @@
 <section id="notes-recent" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container no-heading-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container">
       <div class="inner-page-content-container" swiper-prevent>
         <div infinite-scroll="addMoreRecent()" infinite-scroll-parent scroll-to accordion>
           <h3>recent</h3>
