--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -1,7 +1,7 @@
 <div id="menu-content" class="swiper-no-swiping" ng-controller="MenuController">
   <ul>
     <li class="account-link">
-      <a href ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
+      <a href class="system-link" ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
     </li>
     <li>
       <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
@@ -12,15 +12,30 @@
     <li>
       <a href class="feature-link" ng-class="getFeatureClass('notes')" ng-click="gotoFeature('notes')">notes</a>
     </li>
+    <li>
+      <div class="lists-heading-container">
+        <a href class="feature-link" ng-click="gotoFeature('lists')">lists</a>
+        <a ng-if="lists.length" href class="hide-expand-link" ng-click="toggleLists()">
+          <span ng-if="listsVisible">-</span>
+          <span ng-if="!listsVisible">+</span>
+        </a>
+      </div>
+      <ul class="lists" ng-if="listsVisible">
+        <li class="list" ng-repeat="list in lists" ng-class="$last && 'list-last'">
+          <span class="left-margin"></span>
+          <a href class="list-link" ng-class="getListClass(list)" ng-click="gotoList(list)">{{getListTitleText(list)}}</a>
+        </li>
+      </ul>
+    </li>
     <li class="last-feature">
       <a href class="feature-link" ng-class="getFeatureClass('archive')" ng-click="gotoFeature('archive')">archive</a>
     </li>
 
     <li>
-      <a href ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
+      <a href class="system-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
     </li>
     <li>
-      <a href ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
+      <a href class="system-link" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
     </li>
   </ul>
 </div>
