--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,7 +1,7 @@
-<div id="settings-container">
-  <section id="settings" class="one-column-grid page" ng-controller="SettingsController" snap-drawer-drag="account">
+<div class="single-page-container">
+  <section id="settings" class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="account">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="content-container simple-content-container">
+      <div ng-hide="omnibarVisible" class="content-container page-content-container">
         <ul>
           <li class="simple-content">
             <h3>version</h3>
