--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -13,9 +13,9 @@
       <a href class="feature-link" ng-class="getFeatureClass('notes')" ng-click="gotoFeature('notes')">notes</a>
     </li>
     <li>
-      <div class="lists-heading-container">
-        <a href class="feature-link" ng-click="gotoFeature('lists')">lists</a>
-        <a ng-if="lists.length" href class="hide-expand-link" ng-click="toggleLists()">
+      <div class="lists-heading-container" >
+        <a href class="lists-link" ng-class="getFeatureClass('lists')" ng-click="gotoFeature('lists')">lists</a>
+        <a ng-if="lists.length" href ng-class="getFeatureClass('lists')" class="hide-expand-link" ng-click="toggleLists()">
           <span ng-if="listsVisible">-</span>
           <span ng-if="!listsVisible">+</span>
         </a>
