--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -1,9 +1,9 @@
-<div id="lists-container">
-  <section id="lists" class="one-column-grid page" snap-drawer-drag="lists" ng-init="newList = {};">
+<div class="single-page-container">
+  <section id="lists" class="one-column-grid single-page page" snap-drawer-drag="lists" ng-init="newList = {};">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="content-container simple-content-container">
+      <div ng-hide="omnibarVisible" class="content-container page-content-container">
         <div class="inner-page-content-container" swiper-prevent>
-          <h3><a href class="page-header" swiper-click="gotoLists()">lists</a></h3>
+          <h3>lists</h3>
           <ul class="list-arrow-right">
             <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
               <a class="text-muted click-to-slide" href swiper-click="gotoList(list)">
