--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,7 +1,7 @@
-<div ng-show="isFeatureActive('inbox')" id="inbox-container" ng-controller="InboxController">
-  <section id="inbox" class="two-column-grid page header-page" snap-drawer-drag="inbox">
+<div ng-show="isFeatureActive('inbox')" class="single-page-container" ng-controller="InboxController">
+  <section id="inbox" class="two-column-grid single-page page" snap-drawer-drag="inbox">
     <div class="column hide-footer">
-      <div ng-hide="omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container">
+      <div ng-hide="omnibarVisible" class="content-container page-content-container single-page-content-container">
         <div class="scroll-container" scroll-to>
           <div class="accordion-wrapper">
             <div class="inner-page-content-container" accordion>
